--- a/index.html
+++ b/index.html
@@ -204,8 +204,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="row content_bottom-text">
 			  <div class="col-md-7">
 				<h3>The ISD<br>Sound and Lights Team</h3>
-				<p class="m_1">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio.</p>
-				<p class="m_2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio.</p>
+				<p class="m_1">The ISD Sound and Lights team is a group of students that is responsible for production technology at various school events. With its core and base, the Sound and Lights booth at the International School of Düsseldorf, all events are coordinated from there. Some of these events include six major theatre productions, several concerts, or fundraisers throughout the school year. Teamwork and communication are our beliefs, and essential for any event to run smooth.</p>
+				<p class="m_2">Are you interested in joining, or do you want to know more about our equipment? Feel free to browse through our website, look at upcoming events, or read a product review, which we will try to post regularly. Also, don’t forget to look at Jennifer’s social corner, she is our team mascot and is part of any event.</p>
+				<p class="m_1">Your ISD Sound and Lights Team</p>
 			  </div>
 			</div>
 		</div>
@@ -221,12 +222,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                   <p class="m_5">April 27/28 19:30</p>
                 </div>
                 <div class="col-md-3 top_box">
-                    <img src="images/pic1.jpg" class="img-responsive" alt=""/>
+                    <img src="images/pic2.jpg" class="img-responsive" alt=""/>
                   <h4 class="m_4"><a href="#">John Lennon and Me</a></h4>
                   <p class="m_5">May 11/12 19:30</p>
                 </div>
 				<div class="col-md-3 top_box">
-                    <img src="images/pic1.jpg" class="img-responsive" alt=""/>
+                    <img src="images/placeholder.jpg" class="img-responsive" alt=""/>
                   <h4 class="m_4"><a href="#">Urinetown</a></h4>
                   <p class="m_5">June 8/9 19:30</p>
                 </div>
