--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>ISD Sound and Lights</title>
+<title>Free Snow Bootstrap Website Template | Contact :: w3layouts</title>
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 <link href="css/style.css" rel='stylesheet' type='text/css' />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -15,12 +15,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <script src="js/jquery.min.js"></script>
-<!--<script src="js/jquery.easydropdown.js"></script>-->
-<!--start slider -->
-<link rel="stylesheet" href="css/fwslider.css" media="all">
-<script src="js/jquery-ui.min.js"></script>
-<script src="js/fwslider.js"></script>
-<!--end slider -->
 <script type="text/javascript">
         $(document).ready(function() {
             $(".dropdown img.flag").addClass("flagvisibility");
@@ -52,7 +46,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             });
         });
      </script>
-</head>
+ </head>
 <body>
 	<div class="header">
 		<div class="container">
@@ -65,10 +59,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					 <div class="menu">
 						  <a class="toggleMenu" href="#"><img src="images/nav.png" alt="" /></a>
 						    <ul class="nav" id="nav">
-						    	<li><a href="#">Team</a></li>
-						    	<li><a href="experiance.html">Events</a></li>
-						    	<li><a href="#">Feedback</a></li>
-								<li><a href="#">Join Us</a></li>								
+						    	<li><a href="shop.html">Shop</a></li>
+						    	<li><a href="team.html">Team</a></li>
+						    	<li><a href="shop.html">Events</a></li>
+						    	<li><a href="experiance.html">Experiance</a></li>
+						    	<li><a href="shop.html">Company</a></li>
+								<li class="current"><a href="contact.html">Contact</a></li>								
 								<div class="clear"></div>
 							</ul>
 							<script type="text/javascript" src="js/responsive-nav.js"></script>
@@ -77,7 +73,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	    	    </div>
 	            <div class="header_right">
 	    		  <!-- start search-->
-				     <div class="search-box">
+				   <div class="search-box">
 							<div id="sb-search" class="sb-search">
 								<form>
 									<input class="sb-search-input" placeholder="Enter your search term..." type="search" name="search" id="search">
@@ -92,8 +88,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<script>
 							new UISearch( document.getElementById( 'sb-search' ) );
 						</script>
-						<!----//search-scripts---->
-				    <!--<ul class="icon1 sub-icon1 profile_img">
+				    <ul class="icon1 sub-icon1 profile_img">
 					 <li><a class="active-icon c1" href="#"> </a>
 						<ul class="sub-icon1 list">
 						  <div class="product_control_buttons">
@@ -113,129 +108,56 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</ul>
 					 </li>
 				   </ul>
-		           <div class="clear"></div> -->
-	       </div> 
+		        <div class="clear"></div>
+	       </div>
 	      </div>
 		 </div>
 	    </div>
-	</div>
-	<div class="banner">
-	<!-- start slider -->
-       <div id="fwslider">
-         <div class="slider_container">
-            <div class="slide"> 
-                <!-- Slide image -->
-               <img src="images/slider1.jpg" class="img-responsive" alt=""/>
-                <!-- /Slide image -->
-                <!-- Texts container -->
-                <div class="slide_content">
-                    <div class="slide_content_wrap">
-                        <!-- Text title -->
-                        <h1 class="title">Sound<br>and<br>Lights</h1>
-                        <!-- /Text title -->
-                        <!--<div class="button"><a href="#">See Details</a></div> -->
-                    </div>
-                </div>
-               <!-- /Texts container -->
-            </div>
-            <!-- /Duplicate to create more slides -->
-            <div class="slide">
-               <img src="images/slider2.jpg" class="img-responsive" alt=""/>
-                <div class="slide_content">
-                    <div class="slide_content_wrap">
-                        <h1 class="title">Sound<br>and<br>Lights</h1>
-                       	<!--<div class="button"><a href="#">See Details</a></div> -->
-                    </div>
-                </div>
-            </div>
-            <!--/slide -->
-        </div>
-        <div class="timers"></div>
-        <div class="slidePrev"><span></span></div>
-        <div class="slideNext"><span></span></div>
-       </div>
-       <!--/slider -->
-      </div>
-	  <div class="main">
-		<div class="content-top">
-			<h2>the team</h2>
-			<!--<p>hendrerit in vulputate velit esse molestie consequat, vel illum dolore</p>-->
-			<div class="close_but"><i class="close1"> </i></div>
-				<ul id="flexiselDemo3">
-				<li><img src="images/board1.jpg" /></li>
-				<li><img src="images/board2.jpg" /></li>
-				<li><img src="images/board1.jpg" /></li>
-				<li><img src="images/board2.jpg" /></li>
-				<li><img src="images/board1.jpg" /></li>
-			</ul>
-		<h3>ISD Sound and Lights</h3>
-			<script type="text/javascript">
-		$(window).load(function() {
-			$("#flexiselDemo3").flexisel({
-				visibleItems: 5,
-				animationSpeed: 1000,
-				autoPlay: true,
-				autoPlaySpeed: 3000,    		
-				pauseOnHover: true,
-				enableResponsiveBreakpoints: true,
-		    	responsiveBreakpoints: { 
-		    		portrait: { 
-		    			changePoint:480,
-		    			visibleItems: 1
-		    		}, 
-		    		landscape: { 
-		    			changePoint:640,
-		    			visibleItems: 2
-		    		},
-		    		tablet: { 
-		    			changePoint:768,
-		    			visibleItems: 3
-		    		}
-		    	}
-		    });
-		    
-		});
-		</script>
-		<script type="text/javascript" src="js/jquery.flexisel.js"></script>
-		</div>
-	</div>
-	<div class="content-bottom">
+	  </div>
+     <div class="main">
+      <div class="shop_top">
 		<div class="container">
-			<div class="row content_bottom-text">
-			  <div class="col-md-7">
-				<h3>The ISD<br>Sound and Lights Team</h3>
-				<p class="m_1">The ISD Sound and Lights team is a group of students that is responsible for production technology at various school events. With its core and base, the Sound and Lights booth at the International School of Düsseldorf, all events are coordinated from there. Some of these events include six major theatre productions, several concerts, or fundraisers throughout the school year. Teamwork and communication are our beliefs, and essential for any event to run smooth.</p>
-				<p class="m_2">Are you interested in joining, or do you want to know more about our equipment? Feel free to browse through our website, look at upcoming events, or read a product review, which we will try to post regularly. Also, don’t forget to look at Jennifer’s social corner, she is our team mascot and is part of any event.</p>
-				<p class="m_1">Your ISD Sound and Lights Team</p>
-			  </div>
+			<div class="row">
+				<div class="col-md-7">
+				  <div class="map">
+					<iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.in/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Lighthouse+Point,+FL,+United+States&amp;aq=4&amp;oq=light&amp;sll=26.275636,-80.087265&amp;sspn=0.04941,0.104628&amp;ie=UTF8&amp;hq=&amp;hnear=Lighthouse+Point,+Broward,+Florida,+United+States&amp;t=m&amp;z=14&amp;ll=26.275636,-80.087265&amp;output=embed"></iframe><br><small><a href="https://maps.google.co.in/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Lighthouse+Point,+FL,+United+States&amp;aq=4&amp;oq=light&amp;sll=26.275636,-80.087265&amp;sspn=0.04941,0.104628&amp;ie=UTF8&amp;hq=&amp;hnear=Lighthouse+Point,+Broward,+Florida,+United+States&amp;t=m&amp;z=14&amp;ll=26.275636,-80.087265" style="color:#666;text-align:left;font-size:12px"></a></small>
+				  </div>
+				</div>
+				<div class="col-md-5">
+					<p class="m_8">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat</p>
+					<div class="address">
+				                <p>500 Lorem Ipsum Dolor Sit,</p>
+						   		<p>22-56-2-9 Sit Amet, Lorem,</p>
+						   		<p>USA</p>
+				   		<p>Phone:(00) 222 666 444</p>
+				   		<p>Fax: (000) 000 00 00 0</p>
+				 	 	<p>Email: <span>support[at]snow.com</span></p>
+				   		<p>Follow on: <span>Facebook</span>, <span>Twitter</span></p>
+				   </div>
+				</div>
 			</div>
-		</div>
-	</div>
-	<div class="features">
-		<div class="container">
-			<h3 class="m_3">Events</h3>
-			<div class="close_but"><i class="close1"> </i></div>
-			  <div class="row">
-				<div class="col-md-3 top_box">
-                    <img src="images/pic1.jpg" class="img-responsive" alt=""/>
-                  <h4 class="m_4"><a href="#">One Man, Two Govenors</a></h4>
-                  <p class="m_5">April 27/28 19:30</p>
-                </div>
-                <div class="col-md-3 top_box">
-                    <img src="images/pic2.jpg" class="img-responsive" alt=""/>
-                  <h4 class="m_4"><a href="#">John Lennon and Me</a></h4>
-                  <p class="m_5">May 11/12 19:30</p>
-                </div>
-				<div class="col-md-3 top_box">
-                    <img src="images/placeholder.jpg" class="img-responsive" alt=""/>
-                  <h4 class="m_4"><a href="#">Urinetown</a></h4>
-                  <p class="m_5">June 8/9 19:30</p>
-                </div>
-			</div>
-		 </div>
-	    </div>
-          <!--
-          <div class="footer">
+			<div class="row">
+				<div class="col-md-12 contact">
+				  <form method="post" action="contact-post.html">
+					<div class="to">
+                     	<input type="text" class="text" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}">
+					 	<input type="text" class="text" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}">
+					 	<input type="text" class="text" value="Subject" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Subject';}">
+					</div>
+					<div class="text">
+	                   <textarea value="Message:" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message';}">Message:</textarea>
+	                   <div class="form-submit">
+			           <input name="submit" type="submit" id="submit" value="Submit"><br>
+			           </div>
+	                </div>
+	                <div class="clear"></div>
+                   </form>
+			     </div>
+		    </div>
+	     </div>
+	   </div>
+	  </div>
+	  <div class="footer">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-3">
@@ -281,8 +203,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							  <li class="pinterest"><a href="#"><span> </span></a></li>	
 							  <li class="youtube"><a href="#"><span> </span></a></li>										  				
 						    </ul>
-		   					
-						</ul>
+		   				</ul>
 					</div>
 				</div>
 				<div class="row footer_bottom">
@@ -304,7 +225,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	   				  </dl>
    				</div>
 			</div>
-		</div> 
-		-->
+		</div>
 </body>	
 </html>
